--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,3 +1,12 @@
 .dropdown-toggle,.dropdown-item{
     cursor: pointer;
 }
+.text-gray{
+    color: rgb(194, 190, 190);
+}
+.active{
+    color: white;
+}
+.text-gray:hover{
+    color:white;
+}
