Added Error Handling

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -15,13 +15,17 @@
       
       <!-- Navigation Menu -->
       <div style="display: flex; justify-content: end;">
-        @if(accountService.currentUser()){
+       
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0" >
+       
+          @if(accountService.currentUser()){
           <li><a routerLinkActive="active" routerLink="/members" class="nav-link px-2 text-gray">MEMBERS</a></li>
           <li><a routerLinkActive="active" routerLink="/list" class="nav-link px-2 text-gray">LISTS</a></li>
           <li><a routerLinkActive="active" routerLink="/messages" class="nav-link px-2 text-gray">MESSAGES</a></li>
+          }
+          <li><a routerLinkActive="active" routerLink="/errors" class="nav-link px-2 text-gray">Errors</a></li>
         </ul>
-      }
+      
       </div>
 
 
