--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,72 +1,47 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
 
     <h2 class="text-center text-primary">Sign up</h2>
     <hr>
    
-    <div class="mb-3 form-floating">
-        
-        <input type="text"
-         class="form-control"
-         name="name"
-         [(ngModel)]="model.name"
-         placeholder="Name.."
-         />
-         <label>Name</label>
-    </div>
-    <div class="mb-3 form-floating">
-        
-        <input type="text"
-         class="form-control"
-         name="surname"
-         [(ngModel)]="model.surname"
-         placeholder="Surname.."
-         />
-         <label>Surname</label>
-    </div>
-    <div class="mb-3 form-floating">
-        
-        <input type="text"
-         class="form-control"
-         name="username"
-         [(ngModel)]="model.username"
-         placeholder="Name.."
-         />
-         <label>Username</label>
-    </div>
+    <app-text-input [formControl]="$any(registerForm.controls['name'])"
+    label="Name"></app-text-input>
+    <app-text-input  [formControl]="$any(registerForm.controls['surname'])"
+    [label]="'Surname'"
+    type="text"
+    ></app-text-input>
+    <app-text-input  [formControl]="$any(registerForm.controls['username'])"
+    [label]="'Username'"
+    type="text"
+    ></app-text-input>
+    <app-text-input  [formControl]="$any(registerForm.controls['email'])"
+    [label]="'Email'"
+    type="text"
+    ></app-text-input>
   
-  
-    <div class="mb-3 form-floating">
-        
-        <input type="text"
-         class="form-control"
-         name="email"
-         [(ngModel)]="model.email"
-         placeholder="Email.."
-         />
-         <label>Email</label>
-    </div>
-    <div class="mb-3 form-floating">
-       
-        <input type="text"
-         class="form-control"
-         name="phone"
-         [(ngModel)]="model.phone"
-         placeholder="Phone numberber.."
-         />
-         <label>Phone</label>
-    </div>
-    <div class="mb-3 form-floating">
-        
-        <input type="password"
-         class="form-control"
-         name="password"
-         [(ngModel)]="model.password"
-         placeholder="Password.."
-         />
-         <label>Password</label>
-    </div>
+    <app-text-input  [formControl]="$any(registerForm.controls['phone'])"
+    [label]="'Phone'"
+    type="text"
+    ></app-text-input>
+    <app-text-input [formControl]="$any(registerForm.controls['password'])"
+    [label]="'Password'"
+    type="password"></app-text-input>
+    <app-text-input [formControl]="$any(registerForm.controls['confirmPassword'])"
+    [label]="'Confirm password'"
+    type="password"></app-text-input>
+    @if (validationErrors) {
+        <div class="alert alert-danger">
+
+            <ul>
+                @for (error of validationErrors; track $index) {
+
+                    <li>{{error}}</li>
+                }
+            </ul>
+        </div>
+    }
     <div class="form-group text-center">
-        <button class="btn btn-success me-2" type="submit">Register</button>
+        <button [disabled]="!registerForm.valid" class="btn btn-success me-2" type="submit">Register</button>
         <button class="btn btn-default me-2" (click)="cancel()" type="submit">Cancel</button>
     </div>
 </form>
+
