--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,8 +1,10 @@
-<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
 
-    <h2 class="text-center text-primary">Sign up</h2>
-    <hr>
-   
+<div class="center">
+<form [formGroup]="registerForm" class="registerForm" (ngSubmit)="register()" autocomplete="off">
+    
+    <h2 class="text-center text">Sign up</h2>
+  
+    
     <app-text-input [formControl]="$any(registerForm.controls['name'])"
     label="Name"></app-text-input>
     <app-text-input  [formControl]="$any(registerForm.controls['surname'])"
@@ -17,7 +19,7 @@
     [label]="'Email'"
     type="text"
     ></app-text-input>
-  
+    
     <app-text-input  [formControl]="$any(registerForm.controls['phone'])"
     [label]="'Phone'"
     type="text"
@@ -30,18 +32,19 @@
     type="password"></app-text-input>
     @if (validationErrors) {
         <div class="alert alert-danger">
-
+            
             <ul>
                 @for (error of validationErrors; track $index) {
-
+                    
                     <li>{{error}}</li>
                 }
             </ul>
         </div>
     }
     <div class="form-group text-center">
-        <button [disabled]="!registerForm.valid" class="btn btn-success me-2" type="submit">Register</button>
-        <button class="btn btn-default me-2" (click)="cancel()" type="submit">Cancel</button>
+        <button [disabled]="!registerForm.valid" class="btn btn-success btnB me-2" type="submit">Register</button>
+        <button class="btn btnRed" (click)="cancel()" type="submit">Go Back</button>
     </div>
 </form>
 
+</div>
