--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -19,7 +19,7 @@
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0" >
        
            @if(accountService.currentUser()){
-          <li><a routerLinkActive="active" routerLink="/members" class="nav-link px-2 text-gray">HOME</a></li>
+          <li><a routerLinkActive="active" routerLink="/lekovi" class="nav-link px-2 text-gray">HOME</a></li>
           <li><a routerLinkActive="active" routerLink="/list" class="nav-link px-2 text-gray">TRANSACTIONS</a></li>
           <li><a routerLinkActive="active" routerLink="/messages" class="nav-link px-2 text-gray">SOME</a></li>
           }
