--- a/src/app/lekovi/lekovi-list/lekovi.css
+++ b/src/app/lekovi/lekovi-list/lekovi.css
@@ -3,23 +3,33 @@
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px; ;
     margin: 10px;
     border-radius: 5px;
+    width: 250px;
     padding: 10px 15px;
     
 }
 .cont{
     display: flex;
+    flex-wrap: wrap;
    
 }
+
 .item:hover{
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-.all{
-   
+.cena{
+   font-size: 16px;
+margin: 10px;
+   font-weight: bold;
+}
+.opis{
+    color: #808080; /* Light grey color */
+      font-size: 12px;
+      margin: 10px;
 }
 .begin
 {
     display: flex;
-   
+ padding: 5px;  
    
 }
 .naslov{
@@ -34,6 +44,7 @@
     background-color: #cc3300;
     border-radius: 10px;
     padding: 4px;
+    height: 40px;
     display: flex;
     justify-content: center;
     color: white;
@@ -48,6 +59,9 @@
     border:none;
     border-radius: 8px;
     color:white;
+}
+.naruci:hover{
+  background-color: black;
 }
 @keyframes pulsate {
     0% {
