--- a/src/app/add-lek/add-lek.component.html
+++ b/src/app/add-lek/add-lek.component.html
@@ -1,1 +1,136 @@
-<p>add-lek works!</p>
+<div class="container-fluid">
+<div class="cont">
+
+    <div class="flex2">
+        <div class="form-container">
+            <form [formGroup]="lekForm" (ngSubmit)="onSubmit()">
+              <div class="form-group">
+                <label for="naziv">Naziv</label>
+                <input id="naziv" formControlName="naziv" class="form-control" />
+                <div *ngIf="lekForm.controls['naziv'].invalid && lekForm.controls['naziv'].touched" class="error">
+                  Naziv is required and must be at least 3 characters long.
+                </div>
+              </div>
+          
+              <div class="form-group">
+                <label for="opis">Opis</label>
+                <textarea id="opis" formControlName="opis" class="form-control"></textarea>
+                <div *ngIf="lekForm.controls['opis'].invalid && lekForm.controls['opis'].touched" class="error">
+                  Opis is required and must be at least 5 characters long.
+                </div>
+              </div>
+          
+              <div class="form-group">
+                <label for="proizvodjac">Proizvodjac</label>
+                <input id="proizvodjac" formControlName="proizvodjac" class="form-control" />
+                <div *ngIf="lekForm.controls['proizvodjac'].invalid && lekForm.controls['proizvodjac'].touched" class="error">
+                  Proizvodjac is required and must be at least 3 characters long.
+                </div>
+              </div>
+          
+              <div class="form-group">
+                <label for="datumIsteka">Datum Isteka</label>
+                <input type="date" id="datumIsteka" formControlName="datumIsteka" class="form-control" />
+                <div *ngIf="lekForm.controls['datumIsteka'].invalid && lekForm.controls['datumIsteka'].touched" class="error">
+                  Datum Isteka is required.
+                </div>
+              </div>
+          
+              <div class="form-group check">
+                <label for="naRecept" class="lnaRecept">Na Recept</label>
+                <input type="checkbox" id="naRecept" formControlName="naRecept" />
+              </div>  
+              <div class="form-group">
+                <label for="cena">Cena</label>
+                <input type="number" id="cena" formControlName="cena" class="form-control" />
+                <div *ngIf="lekForm.controls['cena'].invalid && lekForm.controls['cena'].touched" class="error">
+                  Cena is required and must be a valid number.
+                </div>
+              </div>
+          
+              <div class="form-group">
+                <label for="kolicina">Kolicina</label>
+                <input type="number" id="kolicina" formControlName="kolicina" class="form-control" />
+                <div *ngIf="lekForm.controls['kolicina'].invalid && lekForm.controls['kolicina'].touched" class="error">
+                  Kolicina is required and must be at least 1.
+                </div>
+              </div>
+          
+             
+             
+            </form>
+          </div>
+    </div>
+    <div class="flex1">
+        <h3>Upload image Heree</h3>
+        <div class="row mt-5">
+ 
+            <div class="col-md-3">
+     
+                <h3>Add Photos</h3>
+     
+                <div ng2FileDrop
+                     [ngClass]="{'nv-file-over': hasBaseDropZoneOver}"
+                     (fileOver)="fileOverBase($event)"
+                     [uploader]="uploader"
+                     class="card bg-faded p-5 text-center my-drop-zone">
+                   <i class="fa fa-upload fa-3x"></i>
+                    DropPhotos
+                    
+                </div>
+                <div class="mt-3" *ngIf="this.uploader.queue.length>0">
+                    <h4>Photo Preview:</h4>
+                    <img
+                      [src]="photoPreview"
+                      alt="Photo Preview"
+                      class="img-thumbnail"
+                      style="max-width: 300px; height: auto;"
+                    />
+                  </div>
+     
+     
+     
+               
+            </div>
+     
+            <div class="col-md-9" style="margin-bottom: 40px" *ngIf="uploader?.queue?.length">
+     
+                <h3>Upload photo</h3>
+             
+     
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th width="50%">Name</th>
+                        <th>Size</th>
+                        
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let item of uploader?.queue">
+                        <td><strong>{{ item?.file?.name }}</strong></td>
+                        <td *ngIf="uploader?.options?.isHTML5" nowrap>{{ item?.file?.size/1024/1024 | number:'.2' }} MB</td>
+                      
+                      
+                        
+                    </tr>
+                    </tbody>
+                </table>
+     
+                <div>
+                   
+                    <button type="button" class="btn btn-danger btn-s"
+                            (click)="uploader.clearQueue()" [disabled]="!uploader.queue.length">
+                        <span class="fa fa-trash"></span> Remove all
+                    </button>
+                </div>
+     
+            </div>
+        </div>
+        <button type="submit" [disabled]="this.lekForm.invalid || this.uploader.queue.length<=0" class="btn-submit add">Unesi lek</button>
+        
+    </div>
+    
+</div>
+
+</div>
