--- a/src/app/add-lek/add-lek.component.html
+++ b/src/app/add-lek/add-lek.component.html
@@ -3,7 +3,7 @@
 
     <div class="flex2">
         <div class="form-container">
-            <form [formGroup]="lekForm" (ngSubmit)="onSubmit()">
+            <form [formGroup]="lekForm" (ngSubmit)="onSubmit()" id="lekForm">
               <div class="form-group">
                 <label for="naziv">Naziv</label>
                 <input id="naziv" formControlName="naziv" class="form-control" />
@@ -67,7 +67,7 @@
  
             <div class="col-md-3">
      
-                <h3>Add Photos</h3>
+                <h3>Add Photo</h3>
      
                 <div ng2FileDrop
                      [ngClass]="{'nv-file-over': hasBaseDropZoneOver}"
@@ -75,18 +75,8 @@
                      [uploader]="uploader"
                      class="card bg-faded p-5 text-center my-drop-zone">
                    <i class="fa fa-upload fa-3x"></i>
-                    DropPhotos
-                    
+                    DropPhoto
                 </div>
-                <div class="mt-3" *ngIf="this.uploader.queue.length>0">
-                    <h4>Photo Preview:</h4>
-                    <img
-                      [src]="photoPreview"
-                      alt="Photo Preview"
-                      class="img-thumbnail"
-                      style="max-width: 300px; height: auto;"
-                    />
-                  </div>
      
      
      
@@ -94,7 +84,8 @@
             </div>
      
             <div class="col-md-9" style="margin-bottom: 40px" *ngIf="uploader?.queue?.length">
-     
+              <h3>Preview Image</h3>
+              <img *ngIf="imagePreviewUrl" [src]="imagePreviewUrl" width="200" height="200" alt="Preview"  />
                 <h3>Upload photo</h3>
              
      
@@ -118,6 +109,7 @@
                 </table>
      
                 <div>
+                    
                    
                     <button type="button" class="btn btn-danger btn-s"
                             (click)="uploader.clearQueue()" [disabled]="!uploader.queue.length">
@@ -126,11 +118,9 @@
                 </div>
      
             </div>
+            <button type="submit" [disabled]="this.lekForm.invalid || this.uploader.queue.length<=0" class="btn-submit mt-5" form="lekForm">Submit</button>
         </div>
-        <button type="submit" [disabled]="this.lekForm.invalid || this.uploader.queue.length<=0" class="btn-submit add">Unesi lek</button>
-        
     </div>
-    
 </div>
 
 </div>
