--- a/src/app/lekovi/lekovi-list/lekovi.html
+++ b/src/app/lekovi/lekovi-list/lekovi.html
@@ -1,8 +1,20 @@
 <div class="all">
 
 
-    <p>member-list works!</p>
-    <a routerLink="/addMed">Dodaj lek</a>
+    <div class="search-container">
+        <input 
+          type="text" 
+          placeholder="Pretrazi..." 
+          [(ngModel)]="searchQuery" 
+          (input)="onSearchChange()" 
+          class="search-input"
+        />
+        <button class="search-button" (click)="onSearch()">
+          🔍
+        </button>
+      </div>
+    <button (click)="dodaj()" class="addMed">+</button>
+    
     <div class="row">
     
         <div class="cont">
