--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -36,7 +36,7 @@
        
            @if(accountService.currentUser()){
           <li><a routerLinkActive="active" routerLink="/lekovi" class="nav-link px-2 text-gray">LEKOVI</a></li>
-          <li><a routerLinkActive="active" routerLink="/list" class="nav-link px-2 text-gray">KLIJENTI</a></li>
+          <li><a routerLinkActive="active" routerLink="/list-klijenti" class="nav-link px-2 text-gray">KLIJENTI</a></li>
           <li><a routerLinkActive="active" routerLink="/transakcije" class="nav-link px-2 text-gray">TRANSAKCIJE</a></li>
           }
           <!-- <li><a routerLinkActive="active" routerLink="/errors" class="nav-link px-2 text-gray">Errors</a></li> -->
@@ -62,14 +62,29 @@
     @if(accountService.currentUser() ){
       <div dropdown class="dropdown">
         <a dropdownToggle routerLinkActive="active" class="dropdown-toggle  text-decoration-none text-gray px-2 ">NARUDZBINA<i  class="bi bi-cart-fill icon"></i></a>
-        @if(recievedData.lekovi)
+        @if(recievedData)
         {
-         
-          <div *dropdownMenu class="dropdown-menu">
-            <p>Za:{{recievedData.ime}}</p>
-            @for (lek of recievedData.lekovi; track $index) {
-              <p>{{lek.naziv}}</p>
+          
+          <div *dropdownMenu class="dropdown-menu order">
+            <p class="cartTitle">Za:{{recievedData.ime}}</p>
+            <div class="order-items">
+            @for (lek of recievedData.prodajaDetalji; track $index) {
+              <div class="order-item d-flex align-items-center justify-content-center gap-3 border p-2">
+                <img src="{{lek.photoUrl}}" width="50" height="50"/>
+                <div class="d">
+                  {{lek.naziv}}
+                </div>
+                <div class="proizvodCart">
+                 
+                  <p>x{{lek.kolicinaProizvoda}}</p>
+                </div>
+                
+              </div>
+              
             }
+            <p class="cartCena">Cena:{{cena}}din.</p>
+            <button (click)="checkout()" class="checkout">Checkout</button>
+            </div>
           </div>
         }
       
