--- a/src/app/transaction-all/transaction-all.component.html
+++ b/src/app/transaction-all/transaction-all.component.html
@@ -2,7 +2,12 @@
   <div class="left">
    
       <div class="iconUser">
-        <h3>Klijent</h3>
+        <div class="d-flex align-items-center">
+
+
+          <h3 class="kl">Klijent</h3><button (click)="removeKlijent()" class="x" ><i class="bi bi-file-x-fill xCon"></i></button>
+        </div>
+        
         <i class="bi bi-person-fill icon"></i>
            
 
@@ -20,7 +25,7 @@
      <h6>Recepti</h6>
      <p>Lekovi na recept za koji dati korrisnik poseduje recept su obojeni zelenom bojom i moguce je ih izdati.</p>
      <p>Ako želite da pogledate izdate recepte pogledajte ispod.</p>
-    <div class="center"><button class="receptiP"><i class="bi bi-list-check iconR"></i>Recepti</button></div> 
+    <div class="center"><button (click)="pogledajRecepte()" class="receptiP"><i class="bi bi-list-check iconR"></i>Recepti</button></div> 
 
     </div>
     
