--- a/src/app/lekovi/lekovi-list/lekovi.html
+++ b/src/app/lekovi/lekovi-list/lekovi.html
@@ -38,4 +38,23 @@
             }
         </div>
     </div>
+    <div class="pagination-container">
+      <button (click)="goToPrevious()" [disabled]="pageNumber === 1">
+        Prethodni
+      </button>
+  
+      <button
+        *ngFor="let page of pages"
+        (click)="goToPage(page)"
+        [class.active]="page === pageNumber"
+      >
+        {{ page }}
+      </button>
+  
+      <span *ngIf="showDots && pageNumber < totalPages - 2">...</span>
+  
+      <button (click)="goToNext()" [disabled]="pageNumber === totalPages">
+        Sledeći
+      </button>
+    </div>
 </div>
