--- a/src/app/checkout/checkout.component.css
+++ b/src/app/checkout/checkout.component.css
@@ -46,6 +46,30 @@ flex: 7;
     align-items: center;
     border: none;
 }
+.ukloni{
+    background-color: inherit;
+    display: flex;
+    justify-content: center;
+    background-color: red;
+    color:white;
+    border: none;
+    padding: 4px;
+    border-radius: 4px;
+    transition: all 0.4s ease-in-out;
+}
+.ukloni:hover{
+background-color: black;
+}
+.iconTrash{
+    margin-right: 5px;
+    color: white
+}
+.popust{
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .proizvodCart{
     padding: 5px;
     display: flex;
