--- a/src/app/transaction-all/transaction-all.component.html
+++ b/src/app/transaction-all/transaction-all.component.html
@@ -1,4 +1,5 @@
 <div class="cont">
+  
   <div class="left">
    
       <div class="iconUser">
@@ -32,64 +33,93 @@
     
   </div>
   <div class="main">
+    
+<div class="items">
 
-    @for (lek of lekovi; track $index) {
+  @for (lek of lekovi; track $index) {
 
-     
-        @if(isLekInRecepti(lek.id))
-        {
-          <div class="item" style="background-color: #aedcae;" >
-            <div class="begin"><p class="naslov">{{lek.naziv}}</p>
-  
-             @if(lek.naRecept)
-             {
-                <div class="recept">Na recept!</div>
-             }
-  
-            </div>
-           
-            <img src="{{lek.photoUrl}}" width="200" height="200">
-            <p class="opis">{{lek.opis.slice(0,20)}} ...</p>
-            <p class="cena">Cena: {{lek.cena}}.00din</p>
-            @if (lek.naRecept) {
-              <div class="quantity-container">
-                <button class="button-circle" (click)="decreaseQuantity(lek.id)">-</button>
-                <div class="value-circle">{{ quantities[lek.id] || 1 }}</div>
-                <button class="button-circle" (click)="increaseQuantity(lek.id)">+</button>
-                <button (click)="placeOrder(lek.id)">Naruci</button>
-              </div>
-            }
+     @if(lek.kolicina>0)
+     {
+    @if(isLekInRecepti(lek.id))
+    {
+      <div class="item" style="background-color: #aedcae;" >
+        <div class="begin"><p class="naslov">{{lek.naziv}}</p>
+
+         @if(lek.naRecept)
+         {
+            <div class="recept">Na recept!</div>
+         }
+
         </div>
        
-
-        } 
-        @else
-        {
-          <div class="item"  >
-          <div class="begin"><p class="naslov">{{lek.naziv}}</p>
-
-           @if(lek.naRecept)
-           {
-              <div class="recept">Na recept!</div>
-           }
-
+        <img src="{{lek.photoUrl}}" width="200" height="200">
+        <p class="opis">{{lek.opis.slice(0,20)}} ...</p>
+        <p class="cena">Cena: {{lek.cena}}.00din</p>
+        @if (lek.naRecept) {
+          <div class="quantity-container">
+            <button class="button-circle" (click)="decreaseQuantity(lek.id)">-</button>
+            <div class="value-circle">{{ quantities[lek.id] || 1 }}</div>
+            <button class="button-circle" (click)="increaseQuantity(lek.id)">+</button>
+            <button (click)="placeOrder(lek.id)">Naruci</button>
           </div>
-         
-          <img src="{{lek.photoUrl}}" width="200" height="200">
-          <p class="opis">{{lek.opis.slice(0,20)}} ...</p>
-          <p class="cena">Cena: {{lek.cena}}.00din</p>
-        
-          @if (!lek.naRecept) {
-            <div class="quantity-container">
-              <button class="button-circle" (click)="decreaseQuantity(lek.id)">-</button>
-              <div class="value-circle">{{ quantities[lek.id] || 1 }}</div>
-              <button class="button-circle" (click)="increaseQuantity(lek.id)">+</button>
-              <button (click)="placeOrder(lek.id)">Naruci</button>
-            </div>
-          }
+        }
+    </div>
+   
+
+    } 
+    @else
+    {
+      <div class="item"  >
+      <div class="begin"><p class="naslov">{{lek.naziv}}</p>
+
+       @if(lek.naRecept)
+       {
+          <div class="recept">Na recept!</div>
+       }
+
       </div>
-        }     
+     
+      <img src="{{lek.photoUrl}}" width="200" height="200">
+      <p class="opis">{{lek.opis.slice(0,20)}} ...</p>
+      <p class="cena">Cena: {{lek.cena}}.00din</p>
+    
+      @if (!lek.naRecept) {
+        <div class="quantity-container">
+          <button class="button-circle" (click)="decreaseQuantity(lek.id)">-</button>
+          <div class="value-circle">{{ quantities[lek.id] || 1 }}</div>
+          <button class="button-circle" (click)="increaseQuantity(lek.id)">+</button>
+          <button (click)="placeOrder(lek.id)">Naruci</button>
+        </div>
+      }
       
-  }
   </div>
+    }     
+     }
+}
+
+
+</div>
+   
+
+  <div class="pagination-container">
+    <button (click)="goToPrevious()" [disabled]="pageNumber === 1">
+      Prethodni
+    </button>
+
+    <button
+      *ngFor="let page of pages"
+      (click)="goToPage(page)"
+      [class.active]="page === pageNumber"
+    >
+      {{ page }}
+    </button>
+
+    <span *ngIf="showDots && pageNumber < totalPages - 2">...</span>
+
+    <button (click)="goToNext()" [disabled]="pageNumber === totalPages">
+      Sledeći
+    </button>
+  </div>
+  </div>
+  
 </div>
