--- a/src/app/transakcije/transakcije.component.html
+++ b/src/app/transakcije/transakcije.component.html
@@ -1,7 +1,7 @@
 
 <div class="novi">
     <div class="info-div">
-        Dodavanje transakcija pocinje sa izabirom klijenta.Ako klijent ne postoji dodajte <a href="">ovde!</a>
+        Dodavanje transakcija pocinje sa izabirom klijenta.Ako klijent ne postoji dodajte <a routerLink="/addKlijent">ovde!</a>
     </div>
 </div>
 <div class="container-fluid">
